fixed spacing, styled buttons, created package switching jquery function, added php back-end to form

--- a/dev/styles/main.scss
+++ b/dev/styles/main.scss
@@ -43,7 +43,7 @@ body {
   font-weight: 300;
 	font-size: $basefontsize;
 	font-family: $basefontfamily;
-	line-height:1.2em;
+	line-height:1.5em;
 
 }
 
